--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "client": "cd client && npm start"
   },
   "keywords": [],
-  "author": "",
+  "author": "Hunter Coleman",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
